# Formalki_Practicum1_

./: CMakeLists.txt  F16.cpp  F16.h  README.md  main.cpp  main_test.cpp  main_test.cpp.gcov
